fix(columns): prevent text overflow by adding overflow-wrap: anywhere

--- a/src/less/columns.less
+++ b/src/less/columns.less
@@ -193,6 +193,8 @@
   padding: @columnGridPadding;
   margin-top: @columnGridMarginTop;
   margin-bottom: @columnGridMarginBottom;
+  min-width: 0;
+  overflow-wrap: anywhere;
 }
 /* remove padding from column-grid when we have styled-with-bg style from volto-block-style */
 .styled-with-bg .grid.column-grid {
